# intent_recognizer

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
apps/recognizer/: CMakeLists.txt
apps/recognizer/include/: intent.h
apps/recognizer/src/: intent.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  intent_test.cpp
